--- a/lib/l10n/intl_lt.arb
+++ b/lib/l10n/intl_lt.arb
@@ -3861,7 +3861,7 @@
   "playWithAI": "Žaiskite su dirbtiniu intelektu dabar",
   "courseStartDesc": "Pangea botas pasiruošęs bet kada pradėti!\n\n...bet mokymasis yra geresnis su draugais!",
   "@@locale": "lt",
-  "@@last_modified": "2026-01-06 13:02:14.517811",
+  "@@last_modified": "2026-01-07 14:27:30.418081",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11543,6 +11543,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "Teisinga žodyno apibrėžimo praktika",
+  "constructUseIncLMDesc": "Neteisinga žodyno apibrėžimo praktika",
+  "constructUseCorLADesc": "Teisinga žodyno garso praktika",
+  "constructUseIncLADesc": "Neteisinga žodyno garso praktika",
+  "constructUseBonus": "Premija žodyno praktikos metu",
+  "practiceVocab": "Praktikuoti žodyną",
+  "selectMeaning": "Pasirinkite reikšmę",
+  "selectAudio": "Pasirinkite atitinkamą garsą",
+  "congratulations": "Sveikiname!",
+  "anotherRound": "Dar viena raundas",
+  "noActivityRequest": "Nėra dabartinio veiklos prašymo.",
+  "quit": "Išeiti",
+  "congratulationsYouveCompletedPractice": "Sveikiname! Jūs baigėte praktikos sesiją.",
+  "mustHave10Words": "Turite turėti bent 10 žodžių, kad galėtumėte juos praktikuoti. Pabandykite pasikalbėti su draugu arba Pangea Bot, kad sužinotumėte daugiau!",
+  "botSettings": "Roboto nustatymai",
+  "activitySettingsOverrideWarning": "Kalba ir kalbos lygis nustatomi pagal veiklos planą",
+  "voice": "Balsas",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
