--- a/lib/l10n/intl_pt_PT.arb
+++ b/lib/l10n/intl_pt_PT.arb
@@ -3331,7 +3331,7 @@
   "selectAll": "Selecionar tudo",
   "deselectAll": "Desmarcar tudo",
   "@@locale": "pt_PT",
-  "@@last_modified": "2026-01-06 13:01:59.189375",
+  "@@last_modified": "2026-01-07 14:26:44.705293",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11767,6 +11767,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "Prática correta de definição de vocabulário",
+  "constructUseIncLMDesc": "Prática incorreta de definição de vocabulário",
+  "constructUseCorLADesc": "Prática correta de áudio de vocabulário",
+  "constructUseIncLADesc": "Prática incorreta de áudio de vocabulário",
+  "constructUseBonus": "Bônus durante a prática de vocabulário",
+  "practiceVocab": "Praticar vocabulário",
+  "selectMeaning": "Selecione o significado",
+  "selectAudio": "Selecione o áudio correspondente",
+  "congratulations": "Parabéns!",
+  "anotherRound": "Outra rodada",
+  "noActivityRequest": "Nenhum pedido de atividade atual.",
+  "quit": "Sair",
+  "congratulationsYouveCompletedPractice": "Parabéns! Você completou a sessão de prática.",
+  "mustHave10Words": "Você deve ter pelo menos 10 palavras de vocabulário para praticar. Tente conversar com um amigo ou com o Pangea Bot para descobrir mais!",
+  "botSettings": "Configurações do Bot",
+  "activitySettingsOverrideWarning": "Idioma e nível de idioma determinados pelo plano de atividade",
+  "voice": "Voz",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
