--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ar",
-  "@@last_modified": "2026-01-06 13:02:07.966839",
+  "@@last_modified": "2026-01-07 14:27:10.974178",
   "about": "حول",
   "@about": {
     "type": "String",
@@ -10955,6 +10955,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "ممارسة تعريف المفردات الصحيحة",
+  "constructUseIncLMDesc": "ممارسة تعريف المفردات غير الصحيحة",
+  "constructUseCorLADesc": "ممارسة الصوت للمفردات الصحيحة",
+  "constructUseIncLADesc": "ممارسة الصوت للمفردات غير الصحيحة",
+  "constructUseBonus": "مكافأة أثناء ممارسة المفردات",
+  "practiceVocab": "ممارسة المفردات",
+  "selectMeaning": "اختر المعنى",
+  "selectAudio": "اختر الصوت المطابق",
+  "congratulations": "مبروك!",
+  "anotherRound": "جولة أخرى",
+  "noActivityRequest": "لا يوجد طلب نشاط حالي.",
+  "quit": "خروج",
+  "congratulationsYouveCompletedPractice": "تهانينا! لقد أكملت جلسة التدريب.",
+  "mustHave10Words": "يجب أن يكون لديك على الأقل 10 كلمات مفردات لممارستها. حاول التحدث إلى صديق أو بوت بانجيا لاكتشاف المزيد!",
+  "botSettings": "إعدادات البوت",
+  "activitySettingsOverrideWarning": "اللغة ومستوى اللغة محددان بواسطة خطة النشاط",
+  "voice": "صوت",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
