--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "cs",
-  "@@last_modified": "2026-01-06 13:01:46.866113",
+  "@@last_modified": "2026-01-07 14:26:03.848423",
   "about": "O aplikaci",
   "@about": {
     "type": "String",
@@ -11345,6 +11345,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "Správná praxe definice slovní zásoby",
+  "constructUseIncLMDesc": "Nesprávná praxe definice slovní zásoby",
+  "constructUseCorLADesc": "Správná praxe audio slovní zásoby",
+  "constructUseIncLADesc": "Nesprávná praxe audio slovní zásoby",
+  "constructUseBonus": "Bonus během praxe slovní zásoby",
+  "practiceVocab": "Procvičování slovní zásoby",
+  "selectMeaning": "Vyberte význam",
+  "selectAudio": "Vyberte odpovídající audio",
+  "congratulations": "Gratulujeme!",
+  "anotherRound": "Další kolo",
+  "noActivityRequest": "Žádná aktuální žádost o aktivitu.",
+  "quit": "Ukončit",
+  "congratulationsYouveCompletedPractice": "Gratulujeme! Dokončili jste cvičební sezení.",
+  "mustHave10Words": "Musíte mít alespoň 10 slovní zásoby, abyste je mohli procvičovat. Zkuste si promluvit s přítelem nebo Pangea Botem, abyste objevili více!",
+  "botSettings": "Nastavení bota",
+  "activitySettingsOverrideWarning": "Jazyk a jazyková úroveň určené plánem aktivity",
+  "voice": "Hlas",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
