--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5040,6 +5040,8 @@
   "inOngoingActivity": "You have an ongoing activity!",
   "activitiesToUnlockTopicTitle": "Activities to Unlock Next Topic",
   "activitiesToUnlockTopicDesc": "Set the number of activities to unlock the next course topic",
-  "mustHave10Words" : "You must have at least 10 vocab words to practice them. Try talking to a friend or Pangea Bot to discover more!"
-
+  "mustHave10Words" : "You must have at least 10 vocab words to practice them. Try talking to a friend or Pangea Bot to discover more!",
+  "botSettings": "Bot Settings",
+  "activitySettingsOverrideWarning": "Language and language level determined by activity plan",
+  "voice": "Voice"
 }
