--- a/lib/l10n/intl_et.arb
+++ b/lib/l10n/intl_et.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "et",
-  "@@last_modified": "2026-01-06 13:01:32.507692",
+  "@@last_modified": "2026-01-07 14:25:18.173924",
   "about": "Rakenduse teave",
   "@about": {
     "type": "String",
@@ -11009,6 +11009,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "Õige sõnavara määratlemise harjutus",
+  "constructUseIncLMDesc": "Vale sõnavara määratlemise harjutus",
+  "constructUseCorLADesc": "Õige sõnavara heliharjutus",
+  "constructUseIncLADesc": "Vale sõnavara heliharjutus",
+  "constructUseBonus": "Boonus sõnavara harjutamise ajal",
+  "practiceVocab": "Harjuta sõnavara",
+  "selectMeaning": "Vali tähendus",
+  "selectAudio": "Vali sobiv heli",
+  "congratulations": "Palju õnne!",
+  "anotherRound": "Veel üks voor",
+  "noActivityRequest": "Praegu ei ole aktiivsuse taotlust.",
+  "quit": "Välju",
+  "congratulationsYouveCompletedPractice": "Palju õnne! Olete lõpetanud harjut seansi.",
+  "mustHave10Words": "Te peate omama vähemalt 10 sõnavara sõna, et neid harjutada. Proovige rääkida sõbraga või Pangea Botiga, et rohkem avastada!",
+  "botSettings": "Boti seaded",
+  "activitySettingsOverrideWarning": "Keele ja keele taseme määrab tegevusplaan",
+  "voice": "Hääl",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
