--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-06 13:02:20.252502",
+  "@@last_modified": "2026-01-07 14:27:48.189369",
   "about": "Over ons",
   "@about": {
     "type": "String",
@@ -10738,6 +10738,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "Correcte vocabulaire definitie oefening",
+  "constructUseIncLMDesc": "Onjuiste vocabulaire definitie oefening",
+  "constructUseCorLADesc": "Correcte vocabulaire audio oefening",
+  "constructUseIncLADesc": "Onjuiste vocabulaire audio oefening",
+  "constructUseBonus": "Bonus tijdens vocabulaire oefening",
+  "practiceVocab": "Oefen vocabulaire",
+  "selectMeaning": "Selecteer de betekenis",
+  "selectAudio": "Selecteer de bijpassende audio",
+  "congratulations": "Gefeliciteerd!",
+  "anotherRound": "Nog een ronde",
+  "noActivityRequest": "Geen huidige activiteit aanvraag.",
+  "quit": "Afsluiten",
+  "congratulationsYouveCompletedPractice": "Gefeliciteerd! Je hebt de oefensessie voltooid.",
+  "mustHave10Words": "Je moet minstens 10 vocabulairewoorden hebben om ze te oefenen. Probeer met een vriend of Pangea Bot te praten om meer te ontdekken!",
+  "botSettings": "Botinstellingen",
+  "activitySettingsOverrideWarning": "Taal en taalniveau bepaald door het activiteitenplan",
+  "voice": "Stem",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
