--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-06 13:01:26.266378",
+  "@@last_modified": "2026-01-07 14:24:55.031821",
   "about": "Sobre",
   "@about": {
     "type": "String",
@@ -11096,6 +11096,91 @@
     "placeholders": {}
   },
   "@activitiesToUnlockTopicDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "constructUseCorLMDesc": "Prática de definição de vocabulário correta",
+  "constructUseIncLMDesc": "Prática de definição de vocabulário incorreta",
+  "constructUseCorLADesc": "Prática de áudio de vocabulário correta",
+  "constructUseIncLADesc": "Prática de áudio de vocabulário incorreta",
+  "constructUseBonus": "Bônus durante a prática de vocabulário",
+  "practiceVocab": "Praticar vocabulário",
+  "selectMeaning": "Selecione o significado",
+  "selectAudio": "Selecione o áudio correspondente",
+  "congratulations": "Parabéns!",
+  "anotherRound": "Outra rodada",
+  "noActivityRequest": "Nenhum pedido de atividade atual.",
+  "quit": "Sair",
+  "congratulationsYouveCompletedPractice": "Parabéns! Você completou a sessão de prática.",
+  "mustHave10Words": "Você deve ter pelo menos 10 palavras de vocabulário para praticá-las. Tente conversar com um amigo ou com o Pangea Bot para descobrir mais!",
+  "botSettings": "Configurações do Bot",
+  "activitySettingsOverrideWarning": "Idioma e nível de idioma determinados pelo plano de atividade",
+  "voice": "Voz",
+  "@constructUseCorLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLMDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseCorLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseIncLADesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@constructUseBonus": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@practiceVocab": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectMeaning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAudio": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulations": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@anotherRound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noActivityRequest": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@quit": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@congratulationsYouveCompletedPractice": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@mustHave10Words": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botSettings": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitySettingsOverrideWarning": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@voice": {
     "type": "String",
     "placeholders": {}
   }
